--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-jwt": "^8.5.1",
+    "express-oauth2-jwt-bearer": "^1.6.0",
+    "jwks-rsa": "^3.1.0",
     "mongodb": "^6.12.0",
     "mongoose": "^8.8.4",
     "nodemon": "^3.1.7"
