--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.2.4",
     "@heroicons/react": "^2.2.0",
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
+    "express-oauth2-jwt-bearer": "^1.6.0",
     "lightweight-charts": "^4.2.2",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
